# recommendation_engine

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  readme.md
configs/: BUILD.bazel  ranking.conf  services.conf
configs/nginx/: grpc_lb.conf  stream_lb.conf
docs/: Config设计.md  学习笔记-配置与并发.md  项目结构说明.md
examples/: BUILD.bazel
examples/browse_demo/: BUILD.bazel  main.cpp
examples/browse_load_test/: BUILD.bazel  load_options.cpp  load_options.h  main.cpp  worker.cpp  worker.h  worker_stats.cpp  worker_stats.h
include/recommendation/: BUILD.bazel
proto/recommendation/: BUILD.bazel  BrowseService.proto  RankingService.proto  VideoService.proto
src/agent/: BUILD.bazel  agent.cpp  agent.h
src/algorithms/: BUILD.bazel
src/common/: BUILD.bazel  config.cpp  config.h  config_manager.cpp  config_manager.h  config_reader.cpp  config_reader.h  config_snapshot.cpp  config_snapshot.h  gated_config_reloader.cpp  gated_config_reloader.h  grpc_listen_util.cpp  grpc_listen_util.h  http_util.cpp  http_util.h  listen_util.cpp  listen_util.h  logger.cpp  logger.h  net_util.cpp  net_util.h  registry_client.cpp  registry_client.h  server_registration.cpp  server_registration.h  service_gate.cpp  service_gate.h  service_names.h  types.h
src/core/: BUILD.bazel
src/data/: BUILD.bazel
src/registry/: BUILD.bazel  registry_http_server.cpp  registry_http_server.h  registry_main.cpp  registry_store.cpp  registry_store.h
src/servers/browse/: BUILD.bazel  browse_main.cpp
src/servers/browse/client/: BUILD.bazel  browse_client.cpp  browse_client.h
src/servers/browse/server/: BUILD.bazel  browse_engine.cpp  browse_engine.h  browse_server.cpp  browse_server.h  browse_service_impl.cpp  browse_service_impl.h
src/servers/main/: BUILD.bazel  main_server.cpp  main_server.h  mainserver_main.cpp
src/servers/ranking/: BUILD.bazel  ranking_gate_interceptor.cpp  ranking_gate_interceptor.h  ranking_grpc_client.cpp  ranking_grpc_client.h  ranking_grpc_server.cpp  ranking_grpc_server.h  ranking_main.cpp  ranking_server.cpp  ranking_server.h  ranking_service_impl.cpp  ranking_service_impl.h
src/servers/ranking/client/: BUILD.bazel  ranking_client.cpp  ranking_client.h
src/servers/ranking/server/: BUILD.bazel  ranking_engine.cpp  ranking_engine.h  ranking_server.cpp  ranking_server.h  ranking_service_impl.cpp  ranking_service_impl.h
src/servers/video/: BUILD.bazel  video_main.cpp  video_server.cpp  video_server.h
src/servers/video/client/: BUILD.bazel  video_client.cpp  video_client.h
src/servers/video/server/: BUILD.bazel  video_engine.cpp  video_engine.h  video_server.cpp  video_server.h  video_service_impl.cpp  video_service_impl.h
src/utils/: BUILD.bazel
tests/: BUILD.bazel
tools/: BUILD.bazel  registry_ctl.cpp  run_browse.sh  run_demo.sh  run_load_test.sh  run_mainserver.sh  run_ranking.sh  run_registry.sh  run_servers.sh  run_video.sh  stop_servers.sh
