package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "browse_demo",
    srcs = ["main.cpp"],
    copts = ["-std=c++17"],
    data = ["//configs:ranking.conf"],
    deps = [
        "//src/agent",
        "//src/common",
        "//src/servers/main:main_server",
        "//src/servers/ranking:ranking_server",
        "//src/servers/video:video_server",
    ],
)
