load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "ranking_proto",
    srcs = ["RankingService.proto"],
)

cc_proto_library(
    name = "ranking_cc_proto",
    deps = [":ranking_proto"],
)

cc_grpc_library(
    name = "ranking_cc_grpc",
    srcs = [":ranking_proto"],
    grpc_only = True,
    deps = [
        ":ranking_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

proto_library(
    name = "video_proto",
    srcs = ["VideoService.proto"],
)

cc_proto_library(
    name = "video_cc_proto",
    deps = [":video_proto"],
)

cc_grpc_library(
    name = "video_cc_grpc",
    srcs = [":video_proto"],
    grpc_only = True,
    deps = [
        ":video_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

proto_library(
    name = "browse_proto",
    srcs = ["BrowseService.proto"],
)

cc_proto_library(
    name = "browse_cc_proto",
    deps = [":browse_proto"],
)

cc_grpc_library(
    name = "browse_cc_grpc",
    srcs = [":browse_proto"],
    grpc_only = True,
    deps = [
        ":browse_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
    ],
)
