package(default_visibility = ["//visibility:private"])

cc_library(
    name = "logger",
    srcs = ["logger.cpp"],
    hdrs = ["logger.h"],
    includes = ["."],
    copts = ["-std=c++17"],
    linkopts = ["-pthread"],
    deps = ["@com_github_google_glog//:glog"],
)

cc_library(
    name = "config_lib",
    srcs = ["config.cpp"],
    hdrs = ["config.h"],
    includes = ["."],
    copts = ["-std=c++17"],
    linkopts = ["-pthread"],
    deps = [":logger"],
)

cc_library(
    name = "common",
    hdrs = [
        "config.h",
        "logger.h",
        "types.h",
    ],
    includes = ["."],
    copts = ["-std=c++17"],
    linkopts = ["-pthread"],
    visibility = ["//visibility:public"],
    deps = [
        ":config_lib",
        ":logger",
    ],
)
