package(default_visibility = ["//visibility:public"])

cc_library(
    name = "main_server",
    srcs = ["main_server.cpp"],
    hdrs = ["main_server.h"],
    includes = ["."],
    copts = ["-std=c++17"],
    deps = [
        "//src/common",
        "//src/servers/ranking:ranking_grpc",
        "//src/servers/video:video_server",
    ],
)
