package(default_visibility = ["//visibility:public"])

cc_library(
    name = "main_server",
    srcs = ["main_server.cpp"],
    hdrs = ["main_server.h"],
    includes = ["."],
    copts = ["-std=c++17"],
    deps = [
        "//src/common",
        "//src/servers/ranking:ranking_grpc",
        "//src/servers/video:video_server",
    ],
)

cc_binary(
    name = "mainserver_main",
    srcs = ["mainserver_main.cpp"],
    copts = ["-std=c++17"],
    data = ["//configs:ranking.conf"],
    linkopts = ["-pthread"],
    deps = [
        ":main_server",
        "//src/agent",
        "//src/common",
    ],
)
