package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "ranking_main",
    srcs = ["ranking_main.cpp"],
    copts = ["-std=c++17"],
    data = ["//configs:services.conf"],
    linkopts = ["-pthread"],
    deps = [
        "//src/servers/ranking/server:ranking_server",
        "//src/common",
    ],
)
