package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "video_main",
    srcs = ["video_main.cpp"],
    copts = ["-std=c++17"],
    data = ["//configs:services.conf"],
    linkopts = ["-pthread"],
    deps = [
        "//src/servers/video/server:video_server",
        "//src/common",
    ],
)
