package(default_visibility = ["//visibility:private"])

cc_library(
    name = "ranking_client",
    srcs = ["ranking_client.cpp"],
    hdrs = ["ranking_client.h"],
    includes = ["."],
    copts = ["-std=c++17"],
    linkopts = ["-pthread"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/recommendation:ranking_cc_grpc",
        "//src/common",
        "@com_github_grpc_grpc//:grpc++",
    ],
)
